--- a/src/components/LandingBg/index.module.css
+++ b/src/components/LandingBg/index.module.css
@@ -1,4 +1,5 @@
 .stars {
+  position: absolute;
   width: 1px;
   height: 1px;
   background: transparent;
@@ -248,6 +249,7 @@
 }
 
 .stars2 {
+  position: absolute;
   width: 2px;
   height: 2px;
   background: transparent;
@@ -331,6 +333,7 @@
 }
 
 .stars3 {
+  position: absolute;
   width: 3px;
   height: 3px;
   background: transparent;
